fixes styles of dropdown on mobile

--- a/packages/styles/header.import.styl
+++ b/packages/styles/header.import.styl
@@ -32,16 +32,12 @@ header
     +between(1,2)
       width 20%
 
-ul.nav
+.nav
   float right
   +below(1)
     float none
   li
-    &.dropdown
-      &:hover
-        background $primary !important
     &.open
-        background $primary !important
         > a
           background $primary !important
     +below(1)
@@ -116,25 +112,56 @@ ul.nav
               border 0
             > a
               color white
-              padding 10px 15px 10px 40px
+              padding 10px 15px 10px 45px
+              font-size 12px
               &:hover
                 background $primary
-
-      > li > a.navbar-btn
-        width 50%
-        text-align center
-        margin 15px auto 8px auto
-        padding 15px
-      .admin-settings
-        span
-          display inline-block
-      .dropdown-menu
-        padding-top 0
-        position static
-        min-width 100%
-        background none
-        box-shadow none
+    > li > a.navbar-btn
+      width 50%
+      text-align center
+      margin 15px auto 8px auto
+      padding 15px
+    .admin-settings
+      span
+        display inline-block
+  .dropdown-menu
+    padding-top 0
+    border-top 2px solid $primary
+    > li
+      border-bottom 1px solid $border-gray
+      text-shadow none
+      &:last-of-type
         border 0
+      > a
+        clearFix()
+        position relative
+        padding 8px 20px
+        text-shadow none
+        +below(1)
+          padding 8px 35px !important
+          color white
+          translate none
+          font-size 12px
+        span
+          padding-right 5px
+        i
+          centerPosition(0, -50%)
+          position absolute
+          right 5px
+          top 50%
+          width 20px
+          color $d-gray
+          +below(1)
+            position static
+            color white
+            centerPosition(0,0)
+    +below(1)
+      padding 0
+      position static
+      min-width 100%
+      background none
+      box-shadow none
+      border 0
 
 .navbar-nav .active a
 .navbar-nav .active a:focus
@@ -214,6 +241,3 @@ ul.nav
     span
       +below(1)
         display inline-block
-
-.dropdown-menu
-  border-top 2px solid $primary
